--- a/dts/mysensors.dts
+++ b/dts/mysensors.dts
@@ -4,37 +4,71 @@
 /plugin/;
 
 / {
-  compatible = "brcm,bcm2708";
+  compatible = "brcm,bcm2708"; /* probably will soon be bcm2835? */
 
+  /* i2c_arm */
   fragment@0 {
-    target = <&i2c_arm>;
-    __overlay__ {
-      #address-cells = <1>;
-      #size-cells = <0>;
-      status = "okay";
+      target = <&i2c1>;
+      __overlay__ {
+         pinctrl-0 = <&i2c1_pins>;
+         status = "okay";
+      };
+  };
 
-      bmp180: bmp180@77 {
-        /* i2c */
-        compatible = "bosch,bmp180";
-        reg = <0x77>;
+  /* i2c_arm pins */
+  fragment@1 {
+      target = <&i2c1_pins>;
+         pins: __overlay__ {
+         brcm,pins = <2 3>;
+         brcm,function = <4>; /* alt 0 */
+      };
+  };
+
+  /* iio-hwmon bridge */
+  fragment@2 {
+    target-path="/";
+    __overlay__ {
+      iio-hwmon {
+        compatible = "iio-hwmon"; /* NOTE: in-tree but not compiled */
         status = "okay";
 
-        /* iio */
-        #io-channel-cells = <1>; /* multiple channels */
-
-        /* iio/pressure/bmp280 special config */
-        temp-measurement-period = <100>;
-        default-oversampling = <3>;
+        io-channels =
+          <&bmp180 0>, <&bmp180 1>,
+          <&htu21 0>, <&htu21 1>,
+          <&tmp007 0>, <&tmp007 1>,
+          <&tsl2591 0>, <&tsl2591 1>,
+          <&hmc5883l 0>, <&hmc5883l 1>, <&hmc5883l 2>;
+        io-channel-names =
+          "pressure", "temp",
+          "temp", "humidity",
+          "ambient", "object",
+          "all", "ir",
+          "x", "y", "z";
       };
     };
   };
 
-  fragment@1 {
+  /* sensors */
+  fragment@3 {
     target = <&i2c_arm>;
     __overlay__ {
-      #address-cells = <1>;
-      #size-cells = <0>;
+      #address-cells = <1>; /* 1 for i2c devices */
+      #size-cells = <0>;    /* 0 for i2c devices */
       status = "okay";
+
+      bmp180: bmp180@77 {
+        /* i2c */
+        compatible = "bosch,bmp180"; /* NOTE: load bmp280_i2c */
+        reg = <0x77>;
+        status = "okay";
+
+        /* iio */
+        #io-channel-cells = <1>; /* 1 for multiple channels */
+
+        /* iio/pressure/bmp280 special config */
+        temp-measurement-period = <100>;
+        default-oversampling = <3>; /* NOTE: needs verification, documentation might be out-dated */
+      };
 
       htu21: htu21@40 {
         /* i2c */
@@ -43,20 +77,11 @@
         status = "okay";
 
         /* iio */
-        #io-channel-cells = <1>; /* multiple channels */
+        #io-channel-cells = <1>; /* 1 for multiple channels */
 
         /* iio/humidity/htu21 special config */
         /* (NONE) */
       };
-    };
-  };
-
-  fragment@2 {
-    target = <&i2c_arm>;
-    __overlay__ {
-      #address-cells = <1>;
-      #size-cells = <0>;
-      status = "okay";
 
       /* Use HWMON driver instead of IIO, JEDEC JC-42 compatible, 0x18 - 0x1f */
       mcp9808: mcp9808@18 {
@@ -71,61 +96,32 @@
         /* hwmon/jc42 special config */
         /* (NONE) */
       };
-    };
-  };
 
-
-  fragment@3 {
-    target = <&i2c_arm>;
-    __overlay__ {
-      #address-cells = <1>;
-      #size-cells = <0>;
-      status = "okay";
-
-      hmc5883l: hmc5883l@3c {
+      hmc5883l: hmc5883l@1e {
         /* i2c */
-        compatible = "honeywell,hmc5883l";
-        reg = <0x3c>;
+        compatible = "honeywell,hmc5883l"; /* NOTE: load hmc5843_i2c. In-tree but not compiled. */
+        reg = <0x1e>;
         status = "okay";
 
         /* iio */
-        #io-channel-cells = <1>; /* multiple channels */
+        #io-channel-cells = <1>; /* 1 for multiple channels */
 
         /* iio/magnetometer/hmc5843 special config */
         /* (NONE) */
       };
-    };
-  };
 
-
-  fragment@4 {
-    target = <&i2c_arm>;
-    __overlay__ {
-      #address-cells = <1>;
-      #size-cells = <0>;
-      status = "okay";
-
-      tmp007: tmp007@43 {
+      tmp007: tmp007@44 {
         /* i2c */
-        compatible = "ti,tmp007"; /* NOTE: in backports */
-        reg = <0x43>; /* NOTE: pull both AD0 and AD1 up, or there will be a conflict with HTU21D! */
+        compatible = "ti,tmp007"; /* NOTE: in backports. This driver gives RAW values only. */
+        reg = <0x44>; /* NOTE: pull any AD line up, or there will be a conflict with HTU21D! Pulling AD1 up gets you 0x44. */
         status = "okay";
 
         /* iio */
-        #io-channel-cells = <1>; /* multiple channels */
+        #io-channel-cells = <1>; /* 1 for multiple channels */
 
         /* iio/magnetometer/tmp007 special config */
         /* (NONE) */
       };
-    };
-  };
-
-  fragment@5 {
-    target = <&i2c_arm>;
-    __overlay__ {
-      #address-cells = <1>;
-      #size-cells = <0>;
-      status = "okay";
 
       tsl2591: tsl2591@29 {
         /* i2c */
@@ -134,30 +130,12 @@
         status = "okay";
 
         /* iio */
-        #io-channel-cells = <1>; /* multiple channels */
+        #io-channel-cells = <1>; /* 1 for multiple channels */
 
         /* iio/light/tsl2591 special config */
         /* (NONE) */
       };
     };
-  };
-
-  iio-hwmon {
-    compatible = "iio-hwmon";
-    status = "okay";
-
-    io-channels =
-      <&bmp180 0>, <&bmp180 1>,
-      <&htu21 0>, <&htu21 1>,
-      <&tmp007 0>, <&tmp007 1>,
-      <&tsl2591 0>, <&tsl2591 1>,
-      <&hmc5883l 0>, <&hmc5883l 1>, <&hmc5883l 2>;
-    io-channel-names =
-      "pressure", "temp",
-      "temp", "humidity",
-      "ambient", "object",
-      "all", "ir",
-      "x", "y", "z";
   };
 
 };
