fixup! fixup! split things up

--- a/dts/Makefile
+++ b/dts/Makefile
@@ -20,12 +20,12 @@ dump: $(DTBO)
 load: $(DTBO)
 	@echo "NOTE: this shuould be called after modules are loaded."
 	mount | grep configfs || mount -t configfs none /sys/kernel/config
-	for n in $(NAME); do \
+	for n in $<; do \
 		mkdir -p /sys/kernel/config/device-tree/overlays/$$n; \
 		cp $$n /sys/kernel/config/device-tree/overlays/$$n/dtbo; \
 	done
 
 unload:
-	for n in $(NAME); do \
+	for n in $(DTBO); do \
 		rmdir /sys/kernel/config/device-tree/overlays/$$n; \
 	done
