change iio-hwmon parent to root

--- a/dts/10_htu21.dts
+++ b/dts/10_htu21.dts
@@ -30,7 +30,7 @@
   /* NOTE: in-tree but not compiled */
   /* This mirrors iio channels to hwmon, which can be hooked to collectd. */
   fragment@1 {
-    target = <&soc>;
+    target-path = "/";
     __overlay__ {
       iio-hwmon-htu21 {
         compatible = "iio-hwmon";
