--- a/dts/10_bmp180.dts
+++ b/dts/10_bmp180.dts
@@ -32,7 +32,7 @@
   /* NOTE: in-tree but not compiled */
   /* This mirrors iio channels to hwmon, which can be hooked to collectd. */
   fragment@1 {
-    target = <&soc>;
+    target-path = "/";
     __overlay__ {
       iio-hwmon-bmp180 {
         compatible = "iio-hwmon";
