--- a/dts/repo/10_bmp180.dts
+++ b/dts/repo/10_bmp180.dts
@@ -31,7 +31,7 @@
   /* iio-hwmon bridge (modified version) */
   /* This mirrors iio channels to hwmon, which can be hooked to collectd. */
   fragment@1 {
-    target-path = "/";
+    target = <&bmp180>;
     __overlay__ {
       iio-hwmon-bmp180 {
         compatible = "iio-hwmon";
