Revert "put hwmon node under i2c device"
This reverts commit 482a587ca09c6a4782c9b23c67696d97b4d8effa.

--- a/dts/repo/10_bmp180.dts
+++ b/dts/repo/10_bmp180.dts
@@ -31,7 +31,7 @@
   /* iio-hwmon bridge (modified version) */
   /* This mirrors iio channels to hwmon, which can be hooked to collectd. */
   fragment@1 {
-    target = <&bmp180>;
+    target-path = "/";
     __overlay__ {
       iio-hwmon-bmp180 {
         compatible = "iio-hwmon";
