--- a/dts/repo/10_tmp007.dts
+++ b/dts/repo/10_tmp007.dts
@@ -29,7 +29,7 @@
   /* iio-hwmon bridge (modified version) */
   /* This mirrors iio channels to hwmon, which can be hooked to collectd. */
   fragment@1 {
-    target = <&tmp007>;
+    target-path = "/";
     __overlay__ {
       iio-hwmon-tmp007 {
         compatible = "iio-hwmon";
