--- a/dts/repo/10_htu21.dts
+++ b/dts/repo/10_htu21.dts
@@ -31,8 +31,8 @@
   fragment@1 {
     target-path = "/";
     __overlay__ {
-      iio-hwmon-htu21 {
-        compatible = "iio-hwmon";
+      iio-htu21 {
+        compatible = "iio-collectd";
         io-channels = <&htu21 0>, <&htu21 1>;
         io-channel-names = "Ambient", "Humidity";
       };
